<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tax Wizz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ilikebigbuttonsandicannotlie">Big Button</string>
    <string name="SelectProvince">Select Province</string>
    <string name="next">Next</string>

    <string-array name="Provinces">
        <item>Ontario</item>
        <item>Quebec</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>Saskatchewan</item>
        <item>Alberta</item>
        <item>New Brunswick</item>
        <item>Nova Scotia</item>
        <item>Prince Edward Island</item>
        <item>Nunavut</item>
        <item>Yukon</item>
        <item>Northwest Territories</item>
        <item>Newfoundland & Labrador</item>

    </string-array>

    <string name="Select Tax">SelectTax</string>
    <string />

    <string-array name="Taxes">
        <item>Sales Tax</item>
        <item>Property Tax</item>
        <item/>
    </string-array>

    <string name="title_activity_salestax">MainActivity</string>
<<<<<<< HEAD
    <string name="title_activity_incometax">MainActivity</string>

</resources><resources>
=======

    <string name="ontario">Province Of Sale</string>

    <string name="ontario1">Province of Sale</string>

    <string name="province">Province of Sale: Ontario</string>

    <string name="sales1">Province of Sale:</string>

    <string name="sales2">Invoice Subtotal (without taxes $):</string>

    <string name="cal">Calculate</string>

    <string name="sales3">HST ($):</string>

    <string name="sales4">Invoice Total (with taxes $):</string>

    <string name="sales5">GST ($)</string>

    <string name="sales6">PST ($):</string>
>>>>>>> branch 'master' of https://github.com/SonGoku131/TechU_Me_App.git

</resources>
